5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1828_3178.log
== TEST (2019-06-12 15:48:30) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite: ")))
v = zeros(size(vet), dtype=int)
g=0
for i in range(size(vet)):
	if(vet[i]==0):
		g=g[i]+1
print(g)
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:48:52) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite: ")))
v = zeros(size(vet), dtype=int)
g=0
for i in range(size(vet)):
	if(vet[i]==0):
		g=g.[i]+1
print(g)
		
	
-- ERROR:
File "XXXX", line 7
    g=g.[i]+1
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:49:04) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite: ")))
v = zeros(size(vet), dtype=int)
g=0
for i in range(size(vet)):
	if(vet[i]==0):
		g=g[i]+1
print(g)
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
